add some research

--- a/_drafts/2018-12-10-blog-post-7.md
+++ b/_drafts/2018-12-10-blog-post-7.md
@@ -9,76 +9,144 @@ tags:
   - copenhagen
   - naerum
   - linde alle
+  - istanbul
+  - nice
+  - london
+  - monte carlo
+  - amsterdam
+  - munich
+  - zagreb
+  - venice
 ---
 
-The Technical University of Denmark
+This fall, I did an exchange term at the Technical University of Denmark (DTU) in Lyngby, Denmark, which is about forty minutes outside of Copenhagen. It was the most incredible quarter I've had in college so far. I lived outside the US for the first time, and spent almost every weekend traveling to different cities in Europe. It was everything I had expected and definitely the highlight of college so far.
+
+This blog post documents this term. It mainly serves as a record of my experiences and thoughts, but perhaps you may find them interesting or be inspired to spend time abroad.
+
+Insert pull images
+
+Denmark
 ------
 
--living in denmark
--biking
+**About Denmark.** Denmark is the southernmost scandinavian country with a population of 5.6 million. The national language is Danish, but almost everyone speaks good English. I noticed that many Danes are tall and blonde, and they tended to be polite and well-dressed. It is an extremely well-run country with wonderful people. If I had to live somewhere other than the US, I would probably pick Denmark. Here are some fast facts: Denmark...
+- Is the 3rd happiest country in the world.
+- Has the 5th lowest crime rate in the world.
+- Has the lowest income inequality in the world.
+- Has the second highest taxes in the world.
+- Is considered the least corrupt country.
+- Education (including college) and healthcare are free.
+On that note, in my short time in Denmark, it didn't feel that different from US in the grand scale of things.
 
-Scandinavian countries: finland, denmark, norway, have higher rates of happiness: maybe this is because people are not so focused on things like how successful their careers are or how much money they have, but rather their family and relationships. Maybe this is related to income inequality?
+**Living.** I lived in a single apartment in Linde Alle, a new apartment complex for international students studying at DTU. It was really nice to have my own room and kitchenette, although our building was generally drab and colorless. Eating out in Denmark was pricey (at least $20/meal), so I got to refine my cooking skills. Whenever I was home, I cooked both lunch and dinner, so I ate a variety of meals: beef pasta, chicken fried rice, pork chop, salmon with broccoli, turkey-egg sandwiches, fried potatoes, and sloppy joes. Groceries in Denmark were a bit cheaper than in the US, and the nearest grocery store was only two minutes from my apartment by bike.
 
-I lived in a single apartment in Linde Alle, a brand new apartment complex for international students studying at DTU. It was really nice having my own place, and I enjoyed cooking. Whenever I was home, I usually cooked both lunch and dinner, so I ate a variety of meals: beef pasta, chicken fried rice, pork chop, salmon with broccoli, turkey-egg sandwiches, fried potatoes, and sloppy joes. Food (from grocery stores) in Denmark was a bit cheaper than in the US, which was nice, and the nearest grocery store was only two minutes from my apartment by bike.
+**Biking.** Biking is really big in Denmark. Half of people in Copenhagen bike to work. There are bike lanes for getting everywhere, and everyone at college bikes. I rented one from Copenhagen Bikes, which cost 600 kronor ($95) for for the semester. I lived about 5km from campus, which was only a 20 minute bike ride, but I was not in very good shape so the first time biking to school I arrived exhausted and drenched in sweat. I think more countries should promote biking since it's good exercise and environmental friendly, but biking is a lot harder in places like the US where most roads aren't built with bike lanes.
 
-Mid-October, during the fall break, I got sick with tonsilitis. Luckily, Denmark has universal health insurance, so at 9:00am monday morning I went to the doctor assigned to me on my health insurance card, and I was able to make an appointment for 10:15. He then referred me to an ENT specialist nearby, who I went to see right away. He told me I just needed antibiotic treatment, and on my way home I was able to pick up the medicine. For my first time seeking medical care by myself, this process was made easy and I got my antibiotics a couple hours after asking to make an appointment. (Not to mention, seeing the doctors was free.)
+Picture of room, picture of Linde Alle, picture of DTU
+
+**Culture** One thing I did notice was a subtle difference in Danish culture regarding careers and values, compared to American Culture. The feeling I get back at home in the US is that people are extremely ambitious and many work really hard at their jobs. Success tends to include a prestigious job with a high salary. In Denmark, it felt a little different. People were less focused on how much money they made or how successful their careers are, but instead they looked to be decent human beings with family and relationships. In Denmark, people did their homework because its something that should be done, whereas in the US people do their homework because its something that they have to do in order to get a good grade. It's hard to describe, but there's definitely a big contrast to a New York City vibe filled with bankers who want to prove themselves and make it big. The library at Dartmouth is almost always pretty busy up until 1am on most weekdays, but at DTU, it was practically empty by 9pm. I think this culture difference is related to the fact that scandinavian countries such as Finland, Norway, and Denmark have the highest rates of happiness and the lowest income inequality. I didn't learn Danish, but some clues that I read online about Danish that hint at this is that Danes tend to say "we" when talking about a big accomplishment by a single person, and they have a word "hygge" which means a cozy feeling of togetherness.
+I think the economic systems in place in these countries do help shape the culture, but I do not if that is the best option for a country like the United States.
+
+**Universal healthcare.** Mid-October, during the fall break, I was ill for a couple of days with tonsilitis. Denmark has universal health care, but I was pretty confused how to see a doctor since whenever I called the doctor's offices the automated responses were in Danish, and no one worked on weekends. So at 9:00AM the next Monday morning I went to the address assigned to me on my health insurance card, and I saw a doctor at 10:15AM shortly after. The general practicioner referred me to an ENT specialist nearby, who I went to see right away. I was told I just needed antibiotic treatment, and on my way home I was able to pick up the medicine. For my first time seeking medical care outside my hometown, I'm glad that this process was easy and I got medicine just a couple of hours after asking to make an appointment. (Not to mention, the appointments were free.)
+
+**Copenhagen city.** Copenhagen is a small city with great culture. I really liked Nyhavn, which is the port with colorful shops that you see on all the postcards of Copenhagen. There's a small place about ten minutes from Nyhavn called Christiania, which is a progressive community that has its own rules and is independent from the Danish government. Trade of cannibis is legal there, and both times I went, there was a vibrant nightlife. 
+
+Some little things I noticed while in Denmark:
+- Smoking is more common and acceptable than in the US. I didn't see any vaping or juuls.
+- Almost no one uses Mac.
+- Grocery stores tended to be a lot smaller, but there are more of them. This helps when most people bike, versus how most people drive in the US so it is okay if the grocery store is further.
+
+**Møns Klint.** When my friend Naren came to visit for the weekend, we went to Møns Klint, six kilometers of chalky cliffs in southeast Denmark near the Baltic Sea. We rented a car to make the 150km day trip, and it was great! Nothing crazy, but the weather was perfect and the cliffs were beautiful. After, we stopped by a dainty little town nearby called Klintholm Havn to watch the sunset. 
+
+Picture from Klintholm Havn, Nyhavn, and Mons Klint.
 
 Classes
 ------
-I took four classes at DTU: Deep Learning, Image Analysis, Algorithms, and Applied Cryptography. Studying at a college other than Dartmouth allowed me to realize how much I appreciate being at a small liberal arts college. The most immediate shock was how big the classes were. At Dartmouth, I considered a typical class to have around twenty students, and larger classes to have fifty or more. At DTU, many of the classes I went to were held in auditoriums, and had over a hundred students. (Although apparently even this is small, my Cornell friends say they have classes with over a thousand students). Because of these large classes sizes, I got the feeling that professors approached class with the mindset of getting all students to learn some pre-determined course content, rather than guiding a group of individuals to learn how to think.
+**The Technical University of Denmark (DTU).** For the engineering exchange program at Dartmouth, I took four classes at DTU: Deep Learning, Image Analysis, Algorithms, and Applied Cryptography. Studying at DTU made me to realize how much I appreciated studying at a small liberal arts college. The most immediate shock was how big the classes were. At Dartmouth, I considered twenty students the median class size. At DTU, many of the classes I went to were held in auditoriums, and had over a hundred students. (Although apparently even this is small, as my Cornell friends say they have classes with over a thousand students). Because of these large classes sizes, I got the feeling that professors approached class with the mindset of getting all students to learn some pre-determined course content, rather than guiding a group of individuals to learn how to think. That being said, the content and teaching of some courses was quite good. I was impressed by the variety of projects offered by the Deep Learning class, and I really liked the content and lectures for my algorithms course. 
 
-That being said, the content and teaching of some courses was quite good. I was surprised by the variety of projects offered by the Deep Learning class, and I really liked the content and effective teaching in my algorithms course. My deep learning professor recommended a Deep Learning Workshop hosted by Microsoft at their office in Copenhagen, which I went to. I thought it was pretty good, but about half the people there had no experience and the other half had some experience, so the material covered were somewhere inbetween and ended up being not so helpful for either group. I did enjoy a talk given by Akshay Pai, a PostDoc at the University of Copenhagen, about his research classifying brain CT images. A lot of the challenges in his work (namely, data collection and annotation) were almost exactly the same as the ones I faced in my own research classifying lung biopsy images.
+**Deep Learning Workshop @ Microsoft.** I went to the [Deep Learning Workshop by Microsoft](https://www.microsoftevents.com/profile/form/index.cfm?PKformID=0x4923984abcd) at their Copenhagen office, which was recommended by my deep learning professor. I thought it was pretty good, but about half the people there had no experience and the other half had some experience, so the material covered was somewhere inbetween and ended up being not particularly helpful for either group. However, I did really enjoy a talk given by Akshay Pai, a PostDoc at the University of Copenhagen, on his research classifying brain CT images. A lot of the challenges in his work (namely, data collection and annotation) were exactly the same as the challenges I faced in my own research classifying lung adenocarcinoma images. I was glad to see so much interest in deep learning both at this workshop and at DTU, and I'm hoping that Dartmouth begins to catch up in this regard. (Yann LeCun actually gave a talk on campus in Hanover this fall, which I'm sad to have missed but happy to hear about!)
 
-Reading
+Travels
 ------
-I read The *Girl in the Spider's Web* by David Lagercrantz on the flight/layover to Zagreb. For those familiar with the book, I found Camilla to be an incredibly fascinating character. Apparently they're making a movie based on the book, but from the trailers it doesn't seem to follow the book closely. I also read the sequel *The Girl Who Takes an Eye for an Eye*, the next weekend. I was glad to see that Lisbeth (the protagonist) started doing deep learning for human pose detection, although I felt that it didn't really fit well or have an important role in the plot. After finishing the Millenium series, I'm a bit sad that there will be no more books.
+One of reasons I wanted to study abroad was so I could travel on weekends. I made a total of eight trips over the weekends and visited x countries. My experiences:
 
-<img src='/images/poly_spa.jpg' width="32%">
+## Zagreb (Sep 22-25)
 
-Start with Why
+My first trip out of Denmark was to Zagreb, Croatia. As the cultural center and capital of Croatia, Zagreb was welcoming and comforting, especially for pedestrian tourists. Croatian food was delicious, and you could get a full meal at a restaurant for the equivalent of $5. Street shops sold croissants and cheesy bread for only 1 kuna ($0.15). My friend Prahlad and I stayed in two different family-run hotels that cost $70/night), and they were both within five minutes walking of the square, which is incredible for the price. Our flight back to Copenhagen got cancelled, so we got to stay in the five star Sheraton Zagreb. Zagreb is very much a rising Eastern European city that I would definitely recommend visiting.
 
-Side by Side
+The second day, we went on an excursion to Plitvice Lakes National Park, is a beautiful park of lakes and waterfalls accessible by wooden walkways. There were multiple layers of lakes, and Prahlad and I had a nice three hour hike. However, the park was terribly crowded (lots of tourists from Korea), even though we went off-season.
 
-Closing
-------
+## Venice (Sep 29 - Oct 2)
+
+The next weekend, Prahlad and I found cheap tickets for a short trip to Venice. The city was quite small but it was constantly alive with cafes and shops lining the streets and tourists everywhere. It was cool that they exclusively used canals instead of roads; even the ambulance was a boat. We toured Doge's Palace, which had grand chambers where all walls and ceilings were covered with beautiful murals. There wasn't too much to do, but I would recommend seeing Venice at least once (maybe just a day trip) for those who haven't been, especially since it is sinking?
+
+Insert images from Zagreb, Venice, and boat
+
+## Munich (Oct 5-8)
+
+I went with my friend Prahlad and another friend from Dartmouth, Naren, to Munich for a weekend. On the first day, we went to Oktoberfest, the world's largest beer festival (apparently more than six million people attend every year). Oktoberfest was on a huge festival ground with twelve massive beer tents where Germans and tourists dressed in Lederhosen and (what women wear) and got drunk. We all had a good time drinking real German beer. Drinking seems to be a bigger part of European culture than American, as the drinking age in most European countries is 18 (sometimes 16 for beer). Since housing was so expensive due to the Oktoberfest, we stayed in a campsite hosted by Stoke Travel. It a chaotic party ground where everyone stayed in tents, and there was free beer and people partying at every hour of the night.
+
+The second day, we went on a day tour to Linderhof Palace and Neuschwanstein Castle, each a couple of hours from the city by bus. Linderhof Palace, home of X king, was not exceedingly large in size, but each room inside was luxuriously decorated with incredible detail and made me feel poor and insignificant. Neuschwanstein Castle was a beautiful castle in the middle of the mountains, with fantastic views on all sides. I wish I could have stayed for longer to appreciate the incredible view.
+
+## Amsterdam (Oct 26-29)
+
+On the recommendation of many of my international friends at Dartmouth, I went to Amsterdam with Prahlad, Naren, and another friend, Sunpreet. Amsterdam is known for its touristy red light district, and it was all that I had imagined. The streets were filled with shops selling cannibis, magic mushrooms, and other products. "Coffeeshops" in amsterdam did not sell coffee; they sold weed. It was an entirely new experience to be in a hyper-liberal city where drugs and prostitution was legal and accepted. I spent an afternoon at the Van Gogh museum. I saw *Sunflowers* and *The Yellow House*, as well as many of his self-portraits, though my favorite painting was *Bedroom in Arles*. It was odd that *The Starry Night* was not in this museum (it is actually in MoMA in New York, where I saw it a couple of years ago). We toured the Heineken factory in Amsterdam, where we learned about how beer was made. I also checked out Holland Casino, but since I went on a saturday night there was a long queue to get onto a No Limit Hold-em table, so I just watched for a little and then left.
+
+One short excursion that we made from Amsterdam was to Zaanse Schans, historic town closeby with windmills and distinctive wooden houses. Though touristy, seeing the old windmills, dainty houses, and farming facilities made me feel like I was walking through a cozy 20th century Dutch town near the countryside where people made their own milk and cheese. 
+
+Insert images from amsterdam and munich
+
+## Nice & Monte Carlo (Nov 9-12)
+
+I went with my friends Devon and Jeffrey, both Dartmouth students studying abroad in the UK, to Nice, a coastal city in Southern France on the Mediterranean Sea. We went in early November, and although it was already cold in Copenhagen (~40F), it was actually quite warm in Nice (~65F). Along the coast of nice is the Promenade Des Anglais (Bay of Angels Boulevard), a beautiful walkway with restaurants and shops on one side and the rocky beach on the other. Nice is situated in an inlet, so you could see the entire length of the beach all the way to the airport. The palm trees and shoreline reminded me of Florida and Puerto Rico. There were lots of benches and chairs situated along the boulevard, and we probably spent a couple of hours total just sitting on the boulevard and admiring the view. Admiring the sunset in perfect weather without seeing miles of tourists was therapeudical. There's just something magical about the beach at night.
+
+<img src='/images/nice_shoreline.jpg' width="99%">
+The view of Promenade Des Anglais from Château de Nice, a military fort on the coast of Nice.
+
+The first night, we took the train to Monte Carlo, Monaco, to explore the city and gamble at the Monte Carlo Casino. The city was filled fancy cars and shoppings selling designer clothing, but it was odd that there weren't many people around, even on a Friday night. It was almost deserted. I really liked the Monte Carlo casino however; it really felt like Casino Royale. The casino was a huge, ornately decorated building, and all the men were wearing suits and all the women were wearing dresses. It kind of reminded me of high school dances. Unfortunately, there was no texas hold-em (they only had ultimate), so we ended up just playing some low stake games at the slot machines and relaxing on one of the balconies overlooking the city. There was an area private rooms where the minimum bet was $500, but I'm not quite rich enough yet to be a part of that.
+
+I rarely talk about food, but on the second night we had an exceptional dinner at [Le Démodé](https://www.tripadvisor.com/Restaurant_Review-g187234-d784016-Reviews-LE_DEMODE-Nice_French_Riviera_Cote_d_Azur_Provence_Alpes_Cote_d_Azur.html), a dainty old-fashioned French restaurant in Old Town Nice. I had veal with rice, carrots, and arugula salad. The veal was so tender that I could cut it with a fork, and the entire meal just melted in my mouth. I would 10/10 recommend it and will go again if I'm ever back in Nice.
+
+The last night, I signed up for a No Limit Hold'em tournament at Casino Barrière de Nice, which was just a few blocks from our airbnb. Buy in was 65 euros plus 15 euros for the registration fee. I really enjoyed my first time playing poker at a casino. I had only played before with friends, but had watched some youtube tutorials in my free time after watching the movie Rounders, so I had learned the basics and wanted to see if I was any good. I played pretty conservatively for the most part. One hand I went all in on A-K-T with AK, got called by AJ, and won. A while later, I raised pre-flop with pocket kings, got two callers, and re-raised all in on an A-J-J flop. I lost to J-10 and was knocked out of the tournament. In hindsight, I probably should have folded, since there were two callers pre-flop so an ace or jack was very likely in their ranges. Even though I didn't win, I had a good time gambling with a bunch of old Frenchmen. My heart raced whenever I raised or went all in, and I felt like I could play for hours without wanting to stop. With no windows and the very intentional atmosphere of the casino, I felt like I was in an underground world, where I could escape from reality and live purely in the current moment.
+
+Other pictures from 
+
+## London (Nov 26-28)
+
+I went to London for a short weekend to visit Devon, who was studying abroad there for the term. Before arriving, I had no idea how big of a city London actually was. I visited the Sherlock Museum on 221B Baker Street, as well as 187 North Gower Street, where the Sherlock BBC series was filmed. I also went to the British Museum with Devon and my friend Hyemin, where we saw the Rosetta Stone, ancient Egyptian mummies, and parts of the Parthenon. It was like walking through a textbook. I also played a 1-1 cash game at The Poker Room at Victoria's Casino. I think I only won four hands in total: I took down hands where I hit an A with A-10, a two pair of fives and deuces that I hit on the flop and slow-played, and pocket nines that were checked all the way down to the river. Otherwise, I played pretty conservatively and left up 10 pounds on a 50 pound buy-in.
+
 
 
 
 <video src="/images/mount_vic_video.mp4" width="32.5%" autoplay loop></video>
 
-# Travels
-
-One of reasons I wanted to study abroad was so I could travel on weekends. 
-
-Netherlands
+Reading
 ------
-**Amsterdam:** Amsterdam is known for its touristy red light district, and it was all that I had imagined. The streets were filled with shops selling cannibis, magic mushrooms, and other products. "Coffeeshops" in amsterdam did not sell coffee; they sold weed. It was an entirely new experience to be in such a liberal city where drugs and prostitution was legal and accepted. I spent an afternoon at the Van Gogh museum. I saw *Sunflowers* and *The Yellow House*, as well as many of his self-portraits, though my favorite painting was *Bedroom in Arles*. It was odd that *The Starry Night* was not in this museum (it is actually in MoMA in New York, which I saw a couple of years ago). I also visited Holland Casino, but since I went on a saturday night there was unfortuantely a queue of a couple of hours to get onto a No Limit Hold-em table, so I just watched for a little bit and then left. Heineken experience.
 
-**Zaanse Schans:** Zaanse Schans is a historic town near amsterdam with windmills and distinctive wooden houses. Though touristy, seeing the old windmills, dainty houses, and farming facilities made me feel like I was walking through a cozy 20th century Dutch town near the countryside where people made their own milk and cheese. 
+Side by Side
 
-Germany
+Start with Why
+
+
+Steven Kings books
+
+
+**Steven King.** I read most of this book while traveling to and from London.
+
+**The Girl with the Dragon Tattoo Series.** I read The *Girl in the Spider's Web* by David Lagercrantz on the flight/layover to Zagreb. For those familiar with the book, I found Camilla to be an incredibly fascinating character. Apparently they're making a movie based on the book, but from the trailers it doesn't seem to follow the book closely. I also read the sequel *The Girl Who Takes an Eye for an Eye*, the next weekend. I was glad to see that Lisbeth (the protagonist) started doing deep learning for human pose detection, although I felt that it didn't really fit well or have an important role in the plot. After finishing the Millenium series, I will admit that I am a bit sad that there will be no more books.
+
+
+Dealing with Rejection
 ------
-**Munich:** Visiting Munich with Prahlad and Naren during Oktoberfest was a lot of fun! On the first day, we went to Oktoberfest, a the world's largest beer festival (apparently more than 6 million people attend every year). We all had a good time drinking the tasty German beer. Drinking is a much larger part of European culture than American, because in most European countries, the drinking age is 18 (sometimes 16). Since housing was so expensive due to the festival, we stayed in a campsite hosted by Stoke Travel. It was basically a huge party ground where everyone stayed in tents, and there free beer and always people drinking.
+Recruiting
+Protago
+Celiac
+Naofumi
 
-**Linderhof Palace & Neuschwanstein Castle:** The second day, we went on a day tour to visit two castles in the area: Linderhof Palace and Neuschwanstein Castle. Linderhof was not exceedingly large in size, but each room inside was luxuriously decorated with incredible detail and made me feel poor and insignificant. Neuschwanstein Castle is a beautiful castle in the middle of the mountains, with fantastic views on all sides. I wish I could have stayed for longer.
 
-Italy
-------
-**Venice:** I really liked Venice. It was cool to see that they exclusively used canals instead of roads; even the ambulance was a boat. The city was quite small and there was always a vibrant life to it, with tourists walking around and cafes on every street. I saw Doge's palace, which had many grand chambers where all the walls and ceilings were filled with beautiful murals. There was indeed good pizza and gelato. In fact, I had pizza for all my meals.
 
-Croatia
-------
-**Zagreb:** Zagreb is a nice little city. My friend Prahlad and I stayed in different family-run hotels (around $70), and they were both within five minutes of the square, which is incredible for the price. I really enjoyed the food there. You could get a full meal at a restaurant for ~$5, and Croatian food is delicious. Croissants and cheesy bread in the street shops were only 1 kuna = 0.15 dollars. Our flight back got canceled, so we got to stay in the five star Sheraton Zagreb. I had a relaxing night there (they had a nice gym and spa). 
 
-**Plitvice Lakes National Park:** This is a beautiful park of lakes and waterfalls accessible by wooden walkways. There were multiple layers of lakes, and Prahlad and I had a nice three hour hike. However, the park was terribly crowded (lots of tourists from Korea), even though we went off-season. 
-
-Denmark
-------
-**Copenhagen:** Copenhagen has great culture and nightlife. I really liked Nyhavn, which is the port with all the colorful shops that you see on all the postcards of Copenhagen. There's a small place about ten minutes from Nyhavn called Christiania, a progressive community that has its own rules and is independent from the Danish government. Trade of cannibis is legal there, so the nightlife and culture is unique. 
-
-**Møns Klint:** When my friend Naren came to visit for the weekend, Naren, Prahlad, and I went to Møns Klint, six kilometers of chalky cliffs in southeast Denmark near the Baltic Sea. We rented car to make the 150km day trip, and it was great! Nothing crazy, but the weather was perfect and the cliffs were beautiful. After, we stopped by a dainty little town nearby called Klintholm Havn to watch the sunset. 
 
 Closing
 ------
-I'm incredibly grateful for this experience abroad. Being so far from my previous life helped me reflect on it from a new perspective.
+I'm incredibly grateful for this experience abroad. Being so far from my previous life helped me reflect on it from a new perspective. I had been adamant about doing a study abroad program since freshman year because so many alumni told me that studying abroad was the highlight and those who didn't said that they regretted it. I would really recommend studying abroad to anyone who has the chance to.
 
