--- a/_drafts/2018-12-10-blog-post-7.md
+++ b/_drafts/2018-12-10-blog-post-7.md
@@ -129,7 +129,7 @@ The view of Promenade Des Anglais from Château de Nice, a military fort on the 
 
 ### London (Nov 26-28)
 
-I went to London for a short weekend to visit Devon, who was studying abroad there for the term. Before arriving, I had no idea how big of a city London actually was. I visited the Sherlock Museum on 221B Baker Street, as well as 187 North Gower Street, where the Sherlock BBC series was actually filmed. I also went to the British Museum with Devon and my friend Hyemin, where we saw the Rosetta Stone, ancient Egyptian mummies, and parts of the Parthenon. It was like walking through a textbook. I also played a 1-1 cash game at The Poker Room at Victoria's Casino. I think I only won four hands in total: I took down two hands where I hit an ace on the flop with A-10, a two pair of fives and deuces that I hit on the flop and slow-played, and pocket nines that were checked all the way. Otherwise, I played pretty conservatively and ended the night up 10 pounds on a 50 pound buy-in.
+**Pretending I'm in Sherlock because everyone has a British accent.** I went to London for a short weekend to visit Devon, who was studying abroad there for the term. Before arriving, I had no idea how big of a city London actually was. I visited the Sherlock Museum on 221B Baker Street, as well as 187 North Gower Street, where the Sherlock BBC series was actually filmed. I also went to the British Museum with Devon and my friend Hyemin, where we saw the Rosetta Stone, ancient Egyptian mummies, and parts of the Parthenon. It was like walking through a textbook. I also played a 1-1 cash game at The Poker Room at Victoria's Casino. I think I only won four hands in total: I took down two hands where I hit an ace on the flop with A-10, a two pair of fives and deuces that I hit on the flop and slow-played, and pocket nines that were checked all the way. Otherwise, I played pretty conservatively and ended the night up 10 pounds on a 50 pound buy-in.
 
 <img src='/images/dtu/nice_beach.jpg' width="32%">
 <img src='/images/dtu/monte_carlo_casino.jpg' width="32%">
