--- a/_drafts/2018-12-10-blog-post-7.md
+++ b/_drafts/2018-12-10-blog-post-7.md
@@ -1,5 +1,5 @@
 ---
-title: 'My Term '
+title: 'My Term in Denmark'
 date: 2018-12-10
 permalink: /posts/2018/12/blog-post-7/
 tags:
@@ -59,7 +59,7 @@ Left, the DTU library; middle, my room; right, Linde Alle apartment complex.
 **Møns Klint.** When my friend Naren came to Copenhagen for the weekend, we went to Møns Klint, six kilometers of chalky cliffs in southeast Denmark near the Baltic Sea. We rented a car to make the 150km day trip, and it was great! Nothing crazy, but the weather was perfect and the cliffs were beautiful. After, we stopped by a dainty little town nearby called Klintholm Havn to watch the sunset. 
 
 <img src='/images/dtu/christiania.jpg' width="32%">
-<img src='/images/dtu/mons_klint.jpg' width="32%">
+<img src='/images/dtu/mons_klint_2.jpg' width="32%">
 <img src='/images/dtu/savior_church.jpg' width="32%">
 Left, Christiania; middle, the chalky cliffs of Møns Klint; right, the sunset at Klintholm Havn.
 
