--- a/_posts/2018-12-10-blog-post-7.md
+++ b/_posts/2018-12-10-blog-post-7.md
@@ -1,5 +1,5 @@
 ---
-title: 'My Term in Denmark'
+title: 'My Term in the Land of Tall Blonde People'
 date: 2018-12-10
 permalink: /posts/2018/12/blog-post-7/
 tags:
@@ -59,7 +59,7 @@ Left, the DTU library; middle, my room; right, Linde Alle apartment complex.
 **Møns Klint.** When my friend Naren came to Copenhagen for the weekend, we went to Møns Klint, six kilometers of chalky cliffs in southeast Denmark near the Baltic Sea. We rented a car to make the 150km day trip, and it was great! Nothing crazy, but the weather was perfect and the cliffs were beautiful. After, we stopped by a dainty little town nearby called Klintholm Havn to watch the sunset. 
 
 <img src='/images/dtu/christiania.jpg' width="32%">
-<img src='/images/dtu/mons_klint_2.jpg' width="32%">
+<img src='/images/dtu/mons_klint.jpg' width="32%">
 <img src='/images/dtu/savior_church.jpg' width="32%">
 Left, Christiania; middle, the chalky cliffs of Møns Klint; right, the sunset at Klintholm Havn.
 
@@ -74,9 +74,6 @@ Activities
 **Research.** I continued my research with Saeed Hassanpour as a junior research scholar. I did own project for celiac disease detection, and also worked with another lab member, Naofumi, on a end-to-end methodology for whole-slide classification. See our paper on [arXiv](https://arxiv.org/abs/1811.08513). I also continued my work on sequence learning for narrative origin analysis in the Israeli-Palestinan conflict with Eugene Santos as a Neukom Scholar.
 
 **Protago Labs.** I continued to work for Protago Labs, a small AI company I've been working at for more than a year now. I spent some time on topic-aware response generation for our chatbot, but didn't make as much progress as I had hoped since I had so many things going on this term. I will, however, be spending more time with Protago this coming winter as our company's interests shift towards research.
-<!---
-Recruiting
--->
 
 Travels
 ------
@@ -94,7 +91,7 @@ One of reasons I wanted to study abroad was so I could travel on weekends. I mad
 
 <img src='/images/dtu/zagreb_food.jpg' width="32%">
 <img src='/images/dtu/venice_gondola.jpg' width="32%">
-<img src='/images/dtu/venice_pic.jpg' width="35%">
+<img src='/images/dtu/venice_pic.jpg' width="33%">
 Left, Croatian breakfast for which I forgot to write down the name; middle, Venetian gondolas; right, Rialto Bridge in Venice.
 
 ### Munich (Oct 5-8)
@@ -105,7 +102,7 @@ Left, Croatian breakfast for which I forgot to write down the name; middle, Vene
 
 ### Amsterdam (Oct 26-29)
 
-**Why is everything legal?** On the recommendation of many of my international friends at Dartmouth, I went to Amsterdam with Prahlad, Naren, and another friend, Sunny. Amsterdam is known for its red light district, and it was all that I had imagined. The streets were filled with shops selling cannibis, magic mushrooms, and other products. "Coffeeshops" in amsterdam did not sell coffee; they sold weed. It was an entirely new experience to be in a hyper-liberal city where drugs and prostitution was legal and accepted. We spent an afternoon at the Van Gogh museum. I saw *Sunflowers* and *The Yellow House*, as well as many of his self-portraits, though my favorite painting was *Bedroom in Arles*. It was odd that *The Starry Night* was not in this museum (it is actually in MoMA in New York, where I saw it a couple of years ago). We also toured the Heineken factory in Amsterdam, where we learned about how beer was made. I also checked out Holland Casino, but since it was saturday night there was a long queue to get onto a No Limit Hold-em table, so I just watched for a little and then left.
+**Why is everything legal?** On the recommendation of my international friends at Dartmouth, I went to Amsterdam with Prahlad, Naren, and another friend, Sunny. Amsterdam is known for its red light district, and it was all that I had imagined. The streets were filled with shops selling cannibis, magic mushrooms, and other products. "Coffeeshops" in amsterdam did not sell coffee; they sold weed. It was an entirely new experience to be in a hyper-liberal city where drugs and prostitution was legal and accepted. We spent an afternoon at the Van Gogh museum. I saw *Sunflowers* and *The Yellow House*, as well as many of his self-portraits, though my favorite painting was *Bedroom in Arles*. It was odd that *The Starry Night* was not in this museum (it is actually in MoMA in New York, where I saw it a couple of years ago). We also toured the Heineken factory in Amsterdam, where we learned about how beer was made. I checked out Holland Casino, but since it was saturday night there was a long queue to get onto a No Limit Hold-em table, so I just watched for a little and then left.
 
 **A historic Dutch town.** One short excursion that we made from Amsterdam was to Zaanse Schans, a historic town nearby with windmills and distinctive wooden houses. Though touristy, seeing the old windmills, dainty houses, and farming facilities made me feel like I was walking through a cozy 20th century Dutch town near the countryside where people made their own milk and cheese. 
 
