--- a/_posts/2018-12-10-blog-post-7.md
+++ b/_posts/2018-12-10-blog-post-7.md
@@ -91,7 +91,7 @@ One of reasons I wanted to study abroad was so I could travel on weekends. I mad
 
 <img src='/images/dtu/zagreb_food.jpg' width="32%">
 <img src='/images/dtu/venice_gondola.jpg' width="32%">
-<img src='/images/dtu/venice_pic.jpg' width="32%">
+<img src='/images/dtu/venice.jpg' width="32%">
 Left, Croatian breakfast for which I forgot to write down the name; middle, Venetian gondolas; right, Rialto Bridge in Venice.
 
 # Munich (Oct 5-8)
